# pvr.emby

./: .gitignore  .travis.yml  ANDROID  CMakeLists.txt  README.md  azure-pipelines.yml
pvr.emby/: addon.xml.in
pvr.emby/resources/: settings.xml
pvr.emby/resources/language/resource.language.en_gb/: strings.po
pvr.jellyfin/: addon.xml.in  changelog.txt
pvr.jellyfin/resources/: settings.xml
pvr.jellyfin/resources/language/resource.language.en_gb/: strings.po
src/: EmbyData.cpp  EmbyData.h  JellyfinData.cpp  JellyfinData.h  client.cpp  client.h  rest.cpp  rest.h
